# nitrogen

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PKGBUILD  README.md  SPEC.md  TROUBLESHOOTING.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  AUDIO.md  COMMANDS.md  CONFIGURATION.md  FRAME_GENERATION.md  HOTKEYS.md  STREAMING.md  WEBRTC.md
examples/: config.toml  nitrogen.service
nitrogen-cli/: Cargo.toml
nitrogen-cli/src/: main.rs
nitrogen-cli/src/commands/: cast.rs  config.rs  info.rs  list.rs  mod.rs  status.rs  stop.rs
nitrogen-core/: Cargo.toml
nitrogen-core/src/: config.rs  env.rs  error.rs  formats.rs  gpu.rs  hotkeys.rs  lib.rs  overlay.rs  performance.rs  pipeline.rs  types.rs
nitrogen-core/src/capture/: audio.rs  drm.rs  mixer.rs  mod.rs  portal.rs  stream.rs
nitrogen-core/src/config/: av1.rs  file.rs  mod.rs
nitrogen-core/src/encode/: audio.rs  frame_gen.rs  mod.rs  nvenc.rs  nvfruc.rs  nvfruc_sys.rs  scaler.rs  tonemap.rs
nitrogen-core/src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
nitrogen-core/src/output/: camera.rs  file.rs  mod.rs  stream.rs  virtual_audio.rs  webrtc.rs
nitrogen-core/tests/: config_tests.rs  encoder_tests.rs  error_tests.rs  ipc_tests.rs  pipeline_tests.rs
nitrogen-core/tests/mocks/: mod.rs
release/arch/: .SRCINFO  PKGBUILD  PKGBUILD-git
release/bazzite/: README.md
release/deb/debian/: changelog  control  copyright  rules
release/fedora/: nitrogen.spec
release/pop-os/: README.md
