[workspace]
members = ["nitrogen-core", "nitrogen-cli"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Christopher Kelley <ckelley@ghostkellz.sh>"]
license = "MIT"
description = "Wayland-native NVIDIA streaming for Discord and friends"
repository = "https://github.com/ghostkellz/nitrogen"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# System
libc = "0.2"
dirs = "5.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# D-Bus for portal access
zbus = "5.1"
ashpd = "0.10"

# PipeWire
pipewire = "0.8"
libspa = "0.8"

# FFmpeg for NVENC
ffmpeg-next = "8.0"

# Internal
nitrogen-core = { path = "nitrogen-core" }

# Synchronization
parking_lot = "0.12"

# Type casting
bytemuck = { version = "1.19", features = ["derive"] }

# Global hotkeys
evdev = "0.12"

# Ghost ecosystem
ghoststream = { git = "https://github.com/ghostkellz/ghoststream" }
ghostwave-core = { git = "https://github.com/ghostkellz/ghostwave", features = ["pipewire-backend"] }

# WebRTC
webrtc = "0.11"
bytes = "1.9"

# HTTP server for WebRTC signaling
axum = "0.7"
