[package]
name = "nitrogen-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for Nitrogen - Wayland-native NVIDIA streaming"

[[bin]]
name = "nitrogen"
path = "src/main.rs"

[dependencies]
# Core library
nitrogen-core = { workspace = true }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
toml = { workspace = true }

# Terminal UI (optional, for TUI mode)
# ratatui = "0.29"
# crossterm = "0.28"
