[package]
name = "nitrogen-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for Nitrogen - Wayland-native NVIDIA streaming"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
toml = { workspace = true }

# D-Bus for portal access (xdg-desktop-portal)
zbus = { workspace = true }
ashpd = { workspace = true }

# PipeWire
pipewire = { workspace = true }
libspa = { workspace = true }

# FFmpeg for NVENC encoding
ffmpeg-next = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
