[package]
name = "nitrogen-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for Nitrogen - Wayland-native NVIDIA streaming"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# System
libc = { workspace = true }
dirs = { workspace = true }

# D-Bus for portal access (xdg-desktop-portal)
zbus = { workspace = true }
ashpd = { workspace = true }

# PipeWire
pipewire = { workspace = true }
libspa = { workspace = true }

# Synchronization
parking_lot = { workspace = true }

# FFmpeg for NVENC encoding
ffmpeg-next = { workspace = true }

# Type casting
bytemuck = { workspace = true }

# Global hotkeys
evdev = { workspace = true }

# Ghost ecosystem
ghoststream = { workspace = true }
ghostwave-core = { workspace = true }

# Dynamic library loading for NVIDIA FRUC
libloading = "0.8"

# WebRTC
webrtc = { workspace = true }
bytes = { workspace = true }

# HTTP server for WebRTC signaling
axum = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
